--- a/app.yaml
+++ b/app.yaml
@@ -1,3 +1,5 @@
+server:
+  port: 8082
 app:
-    rabbit:
-      uri: amqp://guest:guest@localhost:5672
+  rabbit:
+    uri: amqp://guest:guest@localhost:5672
