--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,7 +44,7 @@ jobs:
     runs-on: ubuntu-18.04
     env:
       IMAGE_REPO: softplan/tenkai-helm-api
-    if: contains(github.ref, 'refs/heads/master') || contains(github.ref, 'refs/tags')
+    if: contains(github.ref, 'refs/heads/main') || contains(github.ref, 'refs/tags')
     steps:
       - uses: actions/checkout@v2
       - uses: actions/download-artifact@v2
